--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,28 +1,12 @@
 {
   "compilerOptions": {
-    "checkJs": false,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "target": "es2020",
-    "module": "es2015",
-    "baseUrl": "src"
+      "target": "esnext",
+      "module": "commonjs",
+      "baseUrl": "src",
+      "paths": {
+        "public/*": ["./public/*"]
+      }
   },
-  "exclude": [
-    "dist",
-    "node_modules",
-    "build",
-    ".vscode",
-    "coverage",
-    ".npm",
-    ".yarn"
-  ],
-  "typeAcquisition": {
-    "enable": true,
-    "include": [
-      "react",
-      "react-dom",
-      "jest",
-      "testing-library__jest-dom"
-    ]
-  }
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
