--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-    "name": "reactapp",
-    "version": "0.1.0",
+    "name": "my-webpack-project",
+    "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "@reduxjs/toolkit": "^1.6.2",
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "dotenv": "^10.0.0",
+        "formik": "^2.2.9",
+        "history": "^5.1.0",
+        "i18next": "^21.6.0",
+        "i18next-browser-languagedetector": "^6.1.2",
+        "lodash": "^4.17.21",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -15,7 +21,7 @@
         "react-redux": "^7.2.6",
         "react-router": "6.0.0-beta.0",
         "react-router-dom": "6.0.0-beta.0",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^4.0.3",
         "react-toolkit": "^2.0.0-alpha.6",
         "redux": "^4.0.5",
         "web-vitals": "^1.1.2",
@@ -23,15 +29,13 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "webpack --mode=production --node-env=production",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+        "eject": "react-scripts eject",
+        "build:dev": "webpack --mode=development",
+        "build:prod": "webpack --mode=production --node-env=production",
+        "watch": "webpack --watch",
+        "serve": "webpack serve"
     },
     "browserslist": {
         "production": [
@@ -46,7 +50,40 @@
         ]
     },
     "devDependencies": {
-        "eslint": "^8.4.1",
-        "eslint-plugin-react": "^7.27.1"
-    }
+        "@babel/core": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+        "@webpack-cli/generators": "^2.4.1",
+        "autoprefixer": "^10.4.0",
+        "css-loader": "^6.5.1",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.4.5",
+        "postcss": "^8.4.4",
+        "postcss-loader": "^6.2.1",
+        "prettier": "^2.5.0",
+        "react-refresh": "^0.11.0",
+        "sass": "^1.44.0",
+        "sass-loader": "^12.3.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.6.0",
+        "workbox-webpack-plugin": "^6.4.2"
+    },
+    "description": "My webpack project",
+    "main": ".eslintrc.js",
+    "directories": {
+        "doc": "doc"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/maulikpatel93/salonapp.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/maulikpatel93/salonapp/issues"
+    },
+    "homepage": "https://github.com/maulikpatel93/salonapp#readme"
 }
