--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
       "target": "esnext",
       "module": "commonjs",
-      "baseUrl": "src",
-      "paths": {
-        "public/*": ["./public/*"]
-      }
+      "baseUrl": "src"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
