--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "agent-base": "^6.0.2",
+        "axios": "^0.24.0",
         "dotenv": "^10.0.0",
         "formik": "^2.2.9",
         "history": "^5.1.0",
@@ -49,29 +51,29 @@
             "last 1 safari version"
         ]
     },
+    "description": "My webpack project",
     "devDependencies": {
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.4",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
         "@webpack-cli/generators": "^2.4.1",
         "autoprefixer": "^10.4.0",
+        "babel-loader": "^8.2.3",
         "css-loader": "^6.5.1",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.4.5",
         "postcss": "^8.4.4",
         "postcss-loader": "^6.2.1",
-        "prettier": "^2.5.0",
+        "prettier": "^2.5.1",
         "react-refresh": "^0.11.0",
         "sass": "^1.44.0",
-        "sass-loader": "^12.3.0",
+        "sass-loader": "^12.4.0",
         "style-loader": "^3.3.1",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.6.0",
         "workbox-webpack-plugin": "^6.4.2"
     },
-    "description": "My webpack project",
-    "main": ".eslintrc.js",
     "directories": {
         "doc": "doc"
     },
