--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "@popperjs/core": "^2.11.0",
         "@reduxjs/toolkit": "^1.6.2",
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "agent-base": "^6.0.2",
         "axios": "^0.24.0",
+        "bootstrap": "^5.1.3",
         "dotenv": "^10.0.0",
         "formik": "^2.2.9",
         "history": "^5.1.0",
         "i18next": "^21.6.0",
         "i18next-browser-languagedetector": "^6.1.2",
+        "jquery": "^3.6.0",
         "lodash": "^4.17.21",
+        "postinstall": "^0.7.4",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -26,6 +30,7 @@
         "react-scripts": "^4.0.3",
         "react-toolkit": "^2.0.0-alpha.6",
         "redux": "^4.0.5",
+        "redux-persist": "^6.0.0",
         "web-vitals": "^1.1.2",
         "yup": "^0.32.11"
     },
@@ -37,7 +42,13 @@
         "build:dev": "webpack --mode=development",
         "build:prod": "webpack --mode=production --node-env=production",
         "watch": "webpack --watch",
-        "serve": "webpack serve"
+        "serve": "webpack serve",
+        "postinstall": "postinstall"
+    },
+    "postinstall": {
+        "bootstrap/dist/css/bootstrap.min.css": "link public/css/bootstrap.min.css",
+        "bootstrap/dist/js/bootstrap.bundle.min.js": "link public/js/bootstrap.bundle.min.js",
+        "jquery/dist/jquery.min.js": "link public/js/jquery.min.js"
     },
     "browserslist": {
         "production": [
@@ -72,6 +83,7 @@
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.6.0",
+        "webpack-retry-load-plugin": "^1.1.6",
         "workbox-webpack-plugin": "^6.4.2"
     }
 }
