--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-helmet": "^6.1.0",
         "react-hot-toast": "^2.1.1",
         "react-i18next": "^11.14.3",
         "react-redux": "^7.2.6",
