--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "i18next-xhr-backend": "^3.2.2",
         "jquery": "^3.6.0",
         "lodash": "^4.17.21",
+        "node-sass": "^7.0.0",
         "postinstall": "^0.7.4",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
