--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.16",
         "@popperjs/core": "^2.11.0",
         "@reduxjs/toolkit": "^1.6.2",
         "@testing-library/jest-dom": "^5.15.1",
@@ -69,6 +72,7 @@
     "devDependencies": {
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.4",
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
         "@webpack-cli/generators": "^2.4.1",
         "autoprefixer": "^10.4.0",
