--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
         "postinstall": "^0.7.4",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.0.3",
         "react-dom": "^17.0.2",
         "react-helmet-async": "^1.2.2",
         "react-hot-toast": "^2.1.1",
         "react-i18next": "^11.14.3",
+        "react-input-mask": "^3.0.0-alpha.2",
         "react-redux": "^7.2.6",
         "react-router": "6.0.0-beta.0",
         "react-router-dom": "6.0.0-beta.0",
