--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "react-router": "6.0.0-beta.0",
         "react-router-dom": "6.0.0-beta.0",
         "react-scripts": "^4.0.3",
+        "react-select": "^5.2.1",
+        "react-select-2": "^2.0.11",
         "react-toolkit": "^2.0.0-alpha.6",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
