--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react": "^17.0.2",
         "react-bootstrap": "^2.0.3",
         "react-dom": "^17.0.2",
+        "react-google-autocomplete": "^2.6.1",
         "react-helmet-async": "^1.2.2",
         "react-hot-toast": "^2.1.1",
         "react-i18next": "^11.14.3",
@@ -41,6 +42,7 @@
         "react-toolkit": "^2.0.0-alpha.6",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
+        "styled-components": "^5.3.3",
         "web-vitals": "^1.1.2",
         "yup": "^0.32.11"
     },
