--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "styled-components": "^5.3.3",
+        "sweetalert2-react": "^0.8.3",
+        "use-dynamic-refs": "^1.0.0",
         "web-vitals": "^1.1.2",
         "yup": "^0.32.11"
     },
