--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-helmet-async": "^1.2.2",
         "react-hot-toast": "^2.1.1",
         "react-i18next": "^11.14.3",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-input-mask": "^3.0.0-alpha.2",
         "react-redux": "^7.2.6",
         "react-router": "6.0.0-beta.0",
