--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-i18next": "^11.14.3",
         "react-infinite-scroll-component": "^6.1.0",
         "react-input-mask": "^3.0.0-alpha.2",
+        "react-paginate": "^8.1.0",
         "react-redux": "^7.2.6",
         "react-router": "6.0.0-beta.0",
         "react-router-dom": "6.0.0-beta.0",
