--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-i18next": "^11.14.3",
         "react-infinite-scroll-component": "^6.1.0",
         "react-input-mask": "^3.0.0-alpha.2",
+        "react-laravel-paginex": "^2.0.8",
         "react-paginate": "^8.1.0",
         "react-redux": "^7.2.6",
         "react-router": "6.0.0-beta.0",
