--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
         "agent-base": "^6.0.2",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
-        "dotenv": "^10.0.0",
         "formik": "^2.2.9",
         "history": "^5.1.0",
         "i18next": "^21.6.0",
         "i18next-browser-languagedetector": "^6.1.2",
         "i18next-xhr-backend": "^3.2.2",
         "jquery": "^3.6.0",
+        "loader": "^2.1.1",
         "lodash": "^4.17.21",
         "node-sass": "^7.0.0",
         "postinstall": "^0.7.4",
@@ -45,7 +45,6 @@
         "react-toolkit": "^2.0.0-alpha.6",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
-        "styled-components": "^5.3.3",
         "sweetalert2-react": "^0.8.3",
         "use-dynamic-refs": "^1.0.0",
         "web-vitals": "^1.1.2",
@@ -77,15 +76,10 @@
     },
     "description": "My webpack project",
     "devDependencies": {
-        "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.4",
         "@fortawesome/fontawesome-free": "^5.15.4",
-        "autoprefixer": "^10.4.0",
-        "babel-loader": "^8.2.3",
-        "css-loader": "^6.5.1",
         "mini-css-extract-plugin": "^2.4.5",
         "prettier": "^2.5.1",
-        "react-refresh": "^0.11.0",
         "sass": "^1.44.0",
         "sass-loader": "^12.4.0",
         "style-loader": "^3.3.1"
