--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "@fortawesome/react-fontawesome": "^0.1.16",
         "@popperjs/core": "^2.11.0",
         "@reduxjs/toolkit": "^1.6.2",
-        "@testing-library/jest-dom": "^5.15.1",
-        "@testing-library/react": "^11.2.7",
-        "@testing-library/user-event": "^12.8.3",
+        "@testing-library/jest-dom": "^5.16.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
         "agent-base": "^6.0.2",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
@@ -40,14 +40,14 @@
         "react-redux": "^7.2.6",
         "react-router": "6.0.0-beta.0",
         "react-router-dom": "6.0.0-beta.0",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "5.0.0",
         "react-select": "^5.2.1",
         "react-toolkit": "^2.0.0-alpha.6",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "sweetalert2-react": "^0.8.3",
         "use-dynamic-refs": "^1.0.0",
-        "web-vitals": "^1.1.2",
+        "web-vitals": "^2.1.3",
         "yup": "^0.32.11"
     },
     "scripts": {
